sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:15: error: identifier expected but ')' found.
        echange(getValeur(getNombreValeurs()-1-i:):Int, (getNombreValeurs()-1-i-1):Int)
                                                 ^AlgCocktailSort1:16: error: ')' expected but '}' found.
      }
      ^